# nexus-console

./: .buildinfo  .gitignore  .gitlab-ci.yml  LICENSE  README.md  api.html  api_documentation.html  device_config.yaml  genindex.html  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  quick_start.html  requirements.txt  search.html  searchindex.js  setup.py  spcm_control.html  sqnc_provider.html  technical_documentation.html  test_acquisition_control.py  user_guide.html  utilities.html
.doctrees/: api.doctree  api_documentation.doctree  environment.pickle  index.doctree  quick_start.doctree  spcm_control.doctree  sqnc_provider.doctree  technical_documentation.doctree  user_guide.doctree  utilities.doctree
.doctrees/_template/: class_template.doctree  module_template.doctree
.doctrees/api_documentation/: acquisition_control.doctree  index.doctree  pulseq_interpreter.doctree  spcm_control.doctree  utilities.doctree
.doctrees/api_reference/: acquisition_control.doctree  index.doctree  pulseq_interpreter.doctree  spcm_control.doctree  utilities.doctree
.doctrees/code_examples/: index.doctree  spectrum.doctree  t2_measurement.doctree  test.doctree  tse_3d.doctree
.doctrees/quick_start/: index.doctree
.doctrees/technical_documentation/: index.doctree  sequence_unrolling.doctree  system_architecture.doctree  system_setup.doctree
.doctrees/user_guide/: acquisition_process.doctree  index.doctree  post_processing.doctree  sequence_unrolling.doctree  spectrum_devices.doctree  system_setup.doctree
.github/workflows/: compile-paper.yml  docs.yml  gitlab-push.yml  pytest.yml  static-tests.yml
.reference/: m4i_gui_2019_12_02.py  simple_rec_fifo.py  simple_rec_fifo_multi_ts_poll.py  simple_rec_multi.py  simple_rec_single-cudafft.py  simple_rec_single.py  simple_rec_single_digital.py  simple_rep_fifo.py  simple_rep_sequence.py  simple_rep_single.py  simple_sync_rec_fifo.py  simple_sync_rep_single.py
_modules/: index.html
_sources/: api.rst.txt  api_documentation.rst.txt  index.rst.txt  sqnc_provider.rst.txt  technical_documentation.rst.txt  utilities.rst.txt
_sources/api_documentation/: acquisition_control.rst.txt  index.rst.txt  pulseq_interpreter.rst.txt  spcm_control.rst.txt  utilities.rst.txt
_sources/api_reference/: acquisition_control.rst.txt  pulseq_interpreter.rst.txt
_sources/code_examples/: index.rst.txt  spectrum.rst.txt  t2_measurement.rst.txt  test.rst.txt
_sources/quick_start/: index.rst.txt
_sources/technical_documentation/: index.rst.txt  sequence_unrolling.rst.txt
_sources/user_guide/: acquisition_process.rst.txt  index.rst.txt  sequence_unrolling.rst.txt  spectrum_devices.rst.txt
_static/: documentation_options.js
_template/: class_template.html  module_template.html
api_documentation/: acquisition_control.html  index.html  pulseq_interpreter.html  spcm_control.html  utilities.html
api_reference/: acquisition_control.html  index.html  pulseq_interpreter.html  spcm_control.html  utilities.html
code_examples/: index.html  spectrum.html  t2_measurement.html  test.html  tse_3d.html
console/: __init__.py
console.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
console/pulseq_interpreter/: __init__.py  interface_unrolled_sequence.py  interpreter.py  sequence.py  sequence_provider.py  write_tse_example.py
console/scanhub/: __init__.py
console/spcm_control/: __init__.py  acquisition.py  acquisition_control.py  ddc.py  device.py  device_config.yaml  device_interface.py  interface_acquisition_parameter.py  pyspcm.py  rx_device.py  rx_device_2.py  spcm_tools.py  tx_device.py
console/utilities/: __init__.py  io.py  line_plots.py  load_config.py  plotly_sequence.py  post_processing.py  processing.py  receiver_postProcessing.py  sequence_plot.py  spcm_data_plot.py
docs/: README.md  api.rst  conf.py  index.rst  spcm_control.rst
docs/source/: api.rst  api_documentation  conf.py  index.rst  quick_start.rst  spcm_control.rst  sqnc_provider.rst  technical_documentation.rst  utilities.rst
examples/: .test.txt.swp  acquisition_control_demo.py  demo_acquisition_control.ipynb  demo_device_interface.ipynb  demo_fid__txrx.py  demo_fid_replay.py  demo_fid_unrolling.py  demo_pulseq_unrolling.py  demo_rxengine.py  demo_se_end2end.py  demo_se_experiment.py  demo_txengine.py  demo_txrx.py  device_interface_demo.ipynb  device_interface_demo.py  example_device_config.yaml  grad_test.seq  jan_experiment.py  measure_tse_unrolling.py  performance_tests.py  performance_tse_unrolling.py  performance_unrolling.py  post_processing.py  se_experiment.py  se_spectrum.py  spinecho_1d.py  t2_measurement.py  test.txt  test_sequence_unroll.py  test_unroll_functions.py  tse_3d.py  tse_sorting.py
examples/pulseq/: fid.seq  read_pulseq_file.py  tse.seq  write_fid.py  write_fid_projection.py  write_gradient_test.py
examples/sequences/: fid_proj.seq  grad_test.seq  pulseq_format_examples.py  txrx_test.seq  write_gradient_test.py  write_tse.py
experiments/: freq_calibration.py  projection.py  se_projection_gradient_measurement.py  se_spectrum.py  spectrum.py  spin_echo.py  spin_echo_image.py  t2_measurement.py  tse.py  tx_calibration.py
experiments/archive/: phase_sync_debug.py  se_image_cart.py  se_projection_gradient_measurement.py  se_spectrum.py  tse.py
experiments/calibration/: calibrate_f0.py  calibrate_shim.py  calibrate_tx.py  (+4 more)
meetings/: MinutesOfMeeting_230720.md
pulseq/: write_fid.py
quick_start/: index.html
sequences/: write_dual_se_spectrum.py  write_fid.py  write_fid_projection.py  write_freq_calibration.py  write_gradient_test.py  write_se.py  write_se_imaging.py  write_se_projection.py  write_se_spectrum.py  write_spin_echo.py  write_tse.py  write_txrx_rf-test.py
spectrum_controller/: pyspcm.py  spcm_tools.py
technical_documentation/: index.html  sequence_unrolling.html  system_architecture.html  system_setup.html
tests/: __init__.py  config.py  conftest.py
user_guide/: acquisition_process.html  index.html  post_processing.html  sequence_unrolling.html  spectrum_devices.html  system_setup.html
(+230 files in other folders)
