[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["console"]
package-dir = {"" = "src"}

[project]
name = "console"
version = "0.0.1"
description = "MRI console application for pulseq sequences build on Spectrum-Instrumentation measurement cards."
authors = [
    {name="David Schote", email="david.schote@ptb.de"},
    {name="Berk Silemek", email="berk.silemek@ptb.de"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { file = "LICENSE" }
keywords = ["MRI, console, spectrum-instrumentation, acquisition, pulseq"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pypulseq@git+https://github.com/imr-framework/pypulseq#egg=dev",
    "numpy",    # "numpy==1.23.0" for pypulseq master release 1.4
    "plotly",
    "PyYAML",
    "matplotlib",
    "pandas"
]

# Dependency groupds (optional)
[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist", "coverage", "codecov"]
lint = ["ruff", "types-PyYAML"]
docs = ["sphinx", "pydata-sphinx-theme", "sphinx-pyproject", "sphinx-design"]
dev = ["line_profiler[ipython]", "nbformat>=4.2.0", "ipykernel", "ipython", "ipywidgets"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 120
indent-width = 4
target-version = "py310"
extend-exclude = ["src/console/spcm_control/spcm", "docs"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint]
# Enable linters
# W = pycodestyle, F = Pyflakes, S = flake8-bandit, I = isort, N = pep8-naming, D = pydocstyle
select = ["W", "F", "S", "I", "N", "D"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-statements = 50

[tool.ruff.lint.pydocstyle]
convention = "numpy"
